--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,11 +4,15 @@
     border-radius: 10px;
     width: 350px;
     height: auto;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
 nav{
-    
+
     margin-left: auto;
     margin-right: auto;
 }
